# automated-trading-system

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: CMakeLists.txt  acquire_data.cpp
lib/: CMakeLists.txt  client.cpp  client.h  contracts.cpp  contracts.h  historical_data.cpp  historical_data.h
tests/: CMakeLists.txt
tests/TestCppClient/: CMakeLists.txt  Main.cpp  StdAfx.h  TestCppClient.cpp  makefile
tests/data/: CMakeLists.txt  test_data.cpp
tests/quick_test/: CMakeLists.txt  quick_test.cpp
tws/client/: CMakeLists.txt
tws/client/lib/: README.md
tws/utils/: CMakeLists.txt  OrderSamples.cpp  Utils.cpp
